<resources>
    <string name="app_name">Adventure Creator</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">169159110389540</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb169159110389540</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>


    <!--******************** Login Screen Strings ******************-->

    <string name="SignIn">Sign In</string>
    <string name="LoggedInAs">Logged in as:\u0020</string>
    <string name="CreateAdventure">Create Adventure</string>
    <string name="ListAdventures">List Adventures</string>


    <string-array name="adventureTypeArray">
        <item>Simple Adventure</item>
        <item>Advanced Adventure</item>
        <item>Customized Events Adventure</item>
    </string-array>


    <string name="PostLoginActivity">Adventure Creator</string>
    <string name="action_signout">Sign Out</string>

    <string name="SetupProfileTitle">Link to Amazon</string>
    <string name="Name">Name</string>
    <string name="NameHint">Enter Name</string>
    <string name="Password">Password</string>
    <string name="LinkToAmazonAccount">Link to Amazon Account</string>
    <string name="AmazonAccountHint">Enter Amazon email address</string>
    <string name="Save">Save</string>
    <string name="AdventureListTitle">Adventure Creator</string>
    <string name="title_activity_create_new_adventure">Create New Adventure</string>

    <string name="New">New</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Next">Next</string>

    <string name="AdventureName">Adventure Name</string>
    <string name="AdventureNameHint">Enter Adventure Name</string>
    <string name="AdventureDescription">Description</string>
    <string name="AdventureDescriptionHint">Enter Adventure Description Here</string>

    <string name="ListOfAdventures">Your Adventures:</string>
    <string name="AdventureType">Adventure Type</string>
    <string name="EnterAdventureType">Choose Your Adventure Type:</string>

    <string name="NewEventActivity">Add New Event</string>
    <string name="EventId">Event #:</string>
    <string name="EventTitle">Event Title</string>
    <string name="EventTitleHint">Enter optional event title here</string>
    <string name="EventDescriptionHint">Enter event description here</string>

    <string name="NoAdventureSelected">No Adventure Selected</string>
    <string name="EditAdventure">Edit Adventure</string>
    <string name="DeleteAdventure">Delete Adventure</string>
    <string name="AreYouSure">Are You Sure?</string>

    <string name="EventList">Event List</string>
    <string name="EventsListTitle">AdventureNameHere</string>
    <string name="EditEvent">Edit Event</string>
    <string name="DeleteEvent">Delete Event</string>

    <string name="AddNextEvent">Add Next Event</string>
    <string name="TriggerWords">Alexa Trigger Phrase</string>
    <string name="EnterAlexaTriggerWords">Enter Alexa Trigger Phrase</string>
    <string name="SelectNextEvent">Select Next Event</string>

    <string name="AddChildEventActivity">Link To Next Event</string>
    <string name="SpinnerChooseNextNode">Next Node</string>
    <string name="SelectEventType">Select Event Type</string>
    <string name="EventType">Event Type</string>

    <string name="CreateNewChildEvent">New Event</string>
    <string name="ChildNodes">Child Nodes</string>

    <string name="YourTitleHere">Your Title Here</string>
    <string name="YourDescriptionHere">Your Description Here</string>
    <string name="ActionLabel">Trigger:</string>

    <string name="CantDeleteEventMessage">You can\'t delete events that have children.</string>
    <string name="CantDeleteStartNode">You can\'t delete the starting event.</string>

    <string name="Required">Required</string>
    <string name="InvalidEmailMessage">Please enter a valid email address</string>

    <string name="PlsLinkAmazonFirstMsg">Please link to your Amazon account first.</string>
    <string name="NoAdventuresFound">No adventures found.  Go ahead and create an adventure!</string>
</resources>
