<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_child"
        android:orderInCategory="100"
        android:title="@string/AddNextEvent"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/Save"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/Delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        app:showAsAction="always" />
</menu>
