<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="team12.cs4850.com.adventurecreator.AddChildEventActivity">

    <include layout="@layout/mytoolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/configPackLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.24" />

        <TextView
            android:id="@+id/triggerWordsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/TriggerWords"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="185dp" />

        <EditText
            android:id="@+id/etTriggerWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/EnterAlexaTriggerWords"
            android:inputType="text"
            android:lines="1"
            android:maxLength="64"
            android:paddingLeft="4dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/triggerWordsLabel"
            />

        <TextView
            android:id="@+id/selectNextEventLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="4dp"
            android:text="@string/SelectNextEvent"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/etTriggerWords"
            />

        <Spinner
            android:id="@+id/spinnerNextNode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/SpinnerChooseNextNode"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@+id/selectNextEventLabel" />

        <TextView
            android:id="@+id/selectEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="4dp"
            android:text="@string/SelectEventType"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/spinnerNextNode"
            />

        <Spinner
            android:id="@+id/spinnerEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/SelectEventType"
            android:spinnerMode="dialog"
            app:layout_constraintTop_toBottomOf="@+id/selectEventType" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#abc7f2d8"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/nextEventLabel"
            app:layout_constraintBottom_toBottomOf="@+id/selectNextEventLabel"
            />


        <ImageButton
            android:id="@+id/btnAddChildEvent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            android:contentDescription="@string/AddNextEvent"
            app:srcCompat="@drawable/ic_add_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/nextEventLabel"
            />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>

