<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="team12.cs4850.com.adventurecreator.AdventureListActivity">

    <include layout="@layout/mytoolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/configPackLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineV0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09" />


        <android.support.constraint.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:text="@string/LoggedInAs"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="btnClick"
            android:text="@string/New"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintHorizontal_bias="0.5"/>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="btnClick"
            android:text="@string/Edit"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/btnNew"
            app:layout_constraintBottom_toBottomOf="@+id/btnNew"
            app:layout_constraintStart_toEndOf="@+id/btnNew"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="btnClick"
            android:text="@string/Delete"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/btnNew"
            app:layout_constraintBottom_toBottomOf="@+id/btnNew"
            app:layout_constraintStart_toEndOf="@+id/btnEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <TextView
            android:id="@+id/tvAdventureListLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingTop="4dp"
            android:text="@string/ListOfAdventures"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/btnNew" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/mAdventureRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rectangleborder"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAdventureListLabel"
            tools:listitem="@layout/adventure_list_item"
            />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>