<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="team12.cs4850.com.adventurecreator.EditEventActivity">

    <include layout="@layout/mytoolbar" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/configPackLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:padding="4dp">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <android.support.constraint.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.24" />

        <TextView
            android:id="@+id/eventTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/EventTitle"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/etEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#f0f0f0"
            android:hint="@string/EventTitleHint"
            android:inputType="textPersonName|textCapWords"
            android:lines="1"
            android:maxLength="32"
            android:nextFocusDown="@+id/etDescription"
            android:paddingLeft="4dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventTitleLabel" />

        <TextView
            android:id="@+id/eventDescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="4dp"
            android:text="@string/AdventureDescription"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEventTitle" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#f0f0f0"
            android:hint="@string/EventDescriptionHint"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="4"
            android:maxLength="256"
            android:nextFocusDown="@+id/btnSave"
            android:paddingLeft="4dp"
            android:scrollbars="vertical"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDescriptionLabel" />

        <Button
            android:id="@+id/btnMonsterInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Edit Monster Info"
            android:layout_marginTop="4dp"
            android:onClick="btnClick"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/etDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/childActionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:text="Action"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMonsterInfo" />

        <TextView
            android:id="@+id/childLeadsToLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="4dp"
            android:text="Leads To"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineH1"
            app:layout_constraintTop_toBottomOf="@+id/btnMonsterInfo" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mChildNodeRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/rectangleborder"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/childActionLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/childevent_list_item"
            />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>

